[gd_scene load_steps=3 format=3 uid="uid://c0pr04essq3du"]

[ext_resource type="Script" uid="uid://b44cockuhi2yq" path="res://scenes/ui/storage/options.gd" id="1_tgapu"]
[ext_resource type="Texture2D" uid="uid://dujoyv2fb471r" path="res://assets/ui/button_mockup.png" id="2_v27b5"]

[node name="Options" type="CanvasLayer"]
script = ExtResource("1_tgapu")

[node name="Slot0" type="NinePatchRect" parent="."]
custom_minimum_size = Vector2(60, 35)
offset_left = 61.0
offset_top = 214.0
offset_right = 132.0
offset_bottom = 249.0
texture = ExtResource("2_v27b5")
region_rect = Rect2(0, 0, 160, 60)
patch_margin_left = 1
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 1
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Slot0"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -13.000008
offset_right = 32.0
offset_bottom = 13.000008
grow_horizontal = 2
grow_vertical = 2
text = "Summary"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Slot1" type="NinePatchRect" parent="."]
custom_minimum_size = Vector2(60, 35)
offset_left = 61.0
offset_top = 250.0
offset_right = 132.0
offset_bottom = 285.0
texture = ExtResource("2_v27b5")
region_rect = Rect2(0, 0, 160, 60)
patch_margin_left = 1
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 1
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Slot1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -13.000008
offset_right = 32.0
offset_bottom = 13.000008
grow_horizontal = 2
grow_vertical = 2
text = "Switch"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Slot2" type="NinePatchRect" parent="."]
custom_minimum_size = Vector2(60, 35)
offset_left = 61.0
offset_top = 286.0
offset_right = 132.0
offset_bottom = 321.0
texture = ExtResource("2_v27b5")
region_rect = Rect2(0, 0, 160, 60)
patch_margin_left = 1
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 1
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Slot2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -13.000008
offset_right = 32.0
offset_bottom = 13.000008
grow_horizontal = 2
grow_vertical = 2
text = "Release"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Slot3" type="NinePatchRect" parent="."]
custom_minimum_size = Vector2(60, 35)
offset_left = 61.0
offset_top = 322.0
offset_right = 132.0
offset_bottom = 357.0
texture = ExtResource("2_v27b5")
region_rect = Rect2(0, 0, 160, 60)
patch_margin_left = 1
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 1
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Slot3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -13.000008
offset_right = 32.0
offset_bottom = 13.000008
grow_horizontal = 2
grow_vertical = 2
text = "Cancel"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true
